Added a raspberry logo and added cancellation mechanism
